@@ -1,0 +1,5 @@
+[item-name]
+rail-signal-planner=Raideopastinsuunnitelma
+
+[rsp-gui]
+rail-signal-planner=Raideopastinsuunnitelma
